--- a/checkpoint2/style.css
+++ b/checkpoint2/style.css
@@ -1,3 +1,10 @@
 body {
-  color: blue;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  position: relative;
+  flex-grow: 1;
 }
